--- a/app.json
+++ b/app.json
@@ -74,17 +74,16 @@
         },
         "CUSTOM_FILE_CAPTION": {
             "description": "A custom file caption for your files. formatable with , file_name, file_caption, file_size, Read Readme.md for better understanding.",
-            "value": "file_caption",
             "required": false
         },
         "DATABASE_URI": {
             "description": "mongoDB URI. Get this value from https://www.mongodb.com. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
-            "value": "mongodb+srv://mjautofilterbot:mjautofilterbot@cluster0.o889c69.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+            "value": "mongodb+srv://diana123:<pw>@cluster0.mtlaq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
             "required": true
         },
         "DATABASE_NAME": {
             "description": "Name of the database in mongoDB. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
-            "value": "cluster0",
+            "value": "dianaprincess",
             "required": false
         },
         "COLLECTION_NAME": {
